--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,51 @@
+# --- Core async stack ---
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.12.0
+async-timeout==4.0.3
+attrs==25.4.0
+
+# --- Web ---
 Flask==3.1.2
+flask-cors==6.0.1
 Routes==2.5.1
-psycopg2==2.9.11
+Werkzeug==3.1.4
+
+# --- Database ---
 SQLAlchemy==2.0.44
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
+python-dateutil==2.9.0.post0
+
+# --- Langchain / RAG stack ---
+chromadb==1.3.5
+langchain==1.1.3
+langchain-core==1.1.2
+langchain-community==0.4.1
+langchain-openai==1.1.1
+langchain-text-splitters==1.0.0
+langsmith==0.4.56
+
+# --- NLP stack (Mac compatible) ---
+torch==2.2.2
+transformers==4.57.3
+sentence-transformers==5.1.2
+
+huggingface-hub==0.36.0
+tokenizers==0.22.1
+safetensors==0.7.0
+tiktoken==0.12.0
+
+# --- Utils ---
+numpy==1.26.4
+pandas==2.3.3
+scikit-learn==1.7.2
+scipy==1.15.3
+tenacity==9.1.2
+requests==2.32.5
+orjson==3.11.5
+mmh3==5.2.0
+tqdm==4.67.1
+rich==14.2.0
