--- a/requirements.txt
+++ b/requirements.txt
@@ -49,3 +49,8 @@ orjson==3.11.5
 mmh3==5.2.0
 tqdm==4.67.1
 rich==14.2.0
+
+python-dotenv==1.2.1
+python-pptx==1.0.2
+requests==2.32.5
+reportlab==4.4.6
